@@ -161,6 +161,7 @@ test_loader_gdm_fx2
 test_loader_hmn
 test_loader_ice
 test_loader_imf
+test_loader_imf_smpl_setpan
 test_loader_ims
 test_loader_ims_patnum
 test_loader_j2b
